--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
+
+# Eclipse project files
+.classpath
+.project
+.metadata
+.settings
